--- a/style.css
+++ b/style.css
@@ -91,5 +91,6 @@ font-family: 'Allura', cursive;
   }
 }
 
-span.jk {font-family: 'Mr Dafoe', cursive;font-size:35px;display:block;line-height:50px;
+span.jk {font-family: 'Allura', cursive;
+font-size:35px;display:block;line-height:50px;
 }
